[project]
name = "shipyard-googlesheets"
version = "0.3.0a0"
description = "A local client for connecting and working with Google Sheets"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.95.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "shipyard-bp-utils>=1.2.0",
    "shipyard-templates>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
