[tool.poetry]
name = "shipyard-hex"
version = "0.2.0a0"
description = "A local client for connecting and working with Hex"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_hex"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31"
shipyard-templates = "0.6.2"
shipyard-bp-utils = "^1.0.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
black = "^24.2.0"
pytest = "^8.0.2"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
