[project]
name = "shipyard-hex"
version = "0.2.0a0"
description = "A local client for connecting and working with Hex"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31",
    "shipyard-templates ==0.6.2",
    "shipyard-bp-utils >=1.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]
