[tool.poetry]
name = "shipyard-hightouch"
version = "0.1.0"
description = "A local client for connecting and working with Hightouch"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "shipyard_hightouch"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.28.0"

[tool.poetry.group.dev.dependencies]
shipyard-bp-utils = {path = "../shipyard-bp-utils"}
shipyard-templates = {path = "../../shipyard-templates"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
