[tool.poetry]
name = "shipyard-hightouch"
version = "0.1.0"
description = "A local client for connecting and working with Hightouch"
authors = ["wrp801 <wespoulsen@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "shipyard_hightouch" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
shipyard-templates = "^0.2.0"
shipyard-utils = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
