[project]
name = "shipyard-hightouch"
version = "0.1.1"
description = "A local client for connecting and working with Hightouch"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "shipyard-templates >=0.2.0",
    "shipyard-utils >=0.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]

