[project]
name = "shipyard-http"
version = "0.1.2"
description = ""
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "shipyard-templates>=0.7.0",
    "shipyard-bp-utils>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "requests-mock>=1.12.1",
]
