[tool.poetry]
version = "0.1.1a25"
name = "shipyard-hubspot"
description = "A local client for connecting and working with Hubspot APIs"
authors = ["JR <johnathan.rodriguez@shipyardapp.com>"]
readme = "README.md"
packages = [{ include = "shipyard_hubspot" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.31.0"
hubspot-api-client = "^8.1.0"
shipyard-templates = "^0.3.1a1"



[tool.poetry.group.dev.dependencies]
shipyard-templates = { path = "../../shipyard-templates", develop = true }
black = { version = "^23.7.0", optional = true }

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
pytest-dotenv = "^0.5.2"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
