[project]
name = "shipyard-hubspot"
version = "0.1.1"
description = "A local client for connecting and working with Hubspot APIs"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "hubspot-api-client>=8.1.0",
    "shipyard-templates==0.3.1",
]

[dependency-groups]
dev = [
    "black>=23.7.0",
]
test = [
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "pytest-dotenv>=0.5.2",
    "requests-mock>=1.11.0",
]
